--- a/foodrecommender/.env
+++ b/foodrecommender/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://kzaidnba:EuL9aQQpoN35onPO@cluster0.m6hepyg.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI="mongodb+srv://kzaidnba:EuL9aQQpoN35onPO@cluster0.m6hepyg.mongodb.net/?retryWrites=true&w=majority"
